--- a/dockerfile.prod
+++ b/dockerfile.prod
@@ -1,7 +1,7 @@
 # Dependencias
-FROM node:21-alpine3.19 as deps
+FROM node:22-alpine as deps
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/dist/main
 
 COPY package.json ./
 COPY package-lock.json ./
@@ -12,7 +12,7 @@ RUN npm install
 
 
 # Builder - Construye la aplicación
-FROM node:21-alpine3.19 as build
+FROM node:22-alpine as build
 
 ARG ORDERS_DATABASE_URL
 ENV DATABASE_URL=$ORDERS_DATABASE_URL
@@ -20,7 +20,7 @@ ENV DATABASE_URL=$ORDERS_DATABASE_URL
 # Imprimir el arg para ver el valor recibido
 RUN echo "database_url ::: $ORDERS_DATABASE_URL";
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/dist/main
 
 # Copiar de deps, los módulos de node
 COPY --from=deps /usr/src/app/node_modules ./node_modules
@@ -44,9 +44,9 @@ RUN npm ci -f --only=production && npm cache clean --force
 
 
 # Crear la imagen final de Docker
-FROM node:21-alpine3.19 as prod
+FROM node:22-alpine as prod
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/dist/main
 
 
 COPY --from=build /usr/src/app/node_modules ./node_modules
